<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green13"
    android:orientation="horizontal"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_crest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_home_img" />

        <TextView
            android:id="@+id/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_home_name"
            android:gravity="center"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="@dimen/TeamNames" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    <TextView
        android:id="@+id/score_textview"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/cd_score"
        android:gravity="center"
        android:textColor="@color/primary_material_dark"
        android:textSize="@dimen/Score" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/blue01"
        android:contentDescription="@string/cd_game_time"
        android:id="@+id/date_textview"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/away_crest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_away_img" />

        <TextView
            android:id="@+id/away_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_away_name"
            android:gravity="center"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="@dimen/TeamNames" />
    </LinearLayout>
    <TextView
        android:id="@+id/widget_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/blue01"
        android:gravity="center"
        android:text="@string/widget_empty_text"
        android:textAppearance="?android:textAppearanceLarge"
        android:contentDescription="@string/cd_no_match_today" />



</LinearLayout>