<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingStart="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_home_img"
                android:gravity="center"
                android:src="@drawable/ic_launcher"/>

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_away_img"
                android:gravity="center"
                android:src="@drawable/ic_launcher"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_home_name"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="@dimen/widget_team" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_away_name"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="@dimen/widget_team" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_home_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="@dimen/widget_team" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_away_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="@dimen/widget_team" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>